<resources>
    <string name="app_name">HealLink</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="delete">Delete</string>
    <string name="date">Date</string>
    <string name="message_undo">Undo deleting the previous item?</string>
    <string name="message_ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="empty">Field cannot be blank</string>
    <string name="update">Update</string>
    <string name="change">Change</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="message_cancel">Do you want to cancel changes to the form?</string>
    <string name="message_delete">Are you sure you want to delete this item?</string>
    <string name="added">One item successfully added</string>
    <string name="changed">One item successfully changed</string>
    <string name="deleted">One item successfully deleted</string>
    <string name="title_list">List</string>
    <string name="title_medical">Medical</string>
    <string name="title_music">Music</string>
    <string name="add_note_description">add note</string>
    <string name="note_added">note has been saved</string>
    <string name="fill_all_fields">Please fill all fields</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="masukkan_email_anda">Masukkan email Anda</string>
    <string name="password">Password</string>
    <string name="masukkan_password">Masukkan password Anda</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="signin">Sign In</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="register">Register</string>
    <string name="nama">Nama</string>
    <string name="masukkan_nama_anda">Masukkan nama Anda</string>
    <string name="signup">Sign Up</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="log_in">Login</string>
    <string name="send_notif">Send Notif</string>
    <string name="notification_title">HealLink</string>
    <string name="notification_message">Tell me your story today!</string>
    <string name="notification_subtext">Reminder</string>
    <string name="alarm_time">set reminder time</string>
    <string name="log_out">Log Out</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hi_user">Hi,</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="analyze">Analyze</string>
    <string name="turn_on_notification">Turn on notification</string>
    <string name="min_10_words">Please enter at least 10 words.</string>
    <string name="max_200_words">Please enter no more than 200 words.</string>
    <string name="anxiety_recommendation">You are anxious. Try relaxation techniques like deep breathing, meditation, and exercise. Keep a regular sleep schedule to manage anxiety.</string>
    <string name="bipolar_recommendation">You are experiencing bipolar symptoms. Stick to a routine, join support groups, and work with a professional to manage mood swings.</string>
    <string name="depression_recommendation">You are depressed. Stay active, connect with loved ones, seek therapy, and consider a gratitude journal.</string>
    <string name="normal_recommendation">Your mental health is stable. Maintain a balanced lifestyle with healthy eating, regular exercise, and sleep. Stay socially active and enjoy hobbies.</string>
    <string name="personality_disorder_recommendation">You may have a personality disorder. Seek therapy, practice mindfulness, and set healthy boundaries in relationships.</string>
    <string name="stress_recommendation">You are stressed. Manage stress by prioritizing tasks, using relaxation techniques, and engaging in calming activities.</string>
    <string name="suicidal_recommendation">You are feeling suicidal. Reach out to loved ones or a professional for help. Remember, you are not alone, and help is available.</string>
    <string name="greeting_text">Hi %1$s\nHere are your stories!</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_denied">Permission denied</string>
    <string name="finish">Finish</string>

</resources>
