<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_list">

    <fragment
        android:id="@+id/navigation_medical"
        android:name="com.heallinkapp.ui.medical.MedicalFragment"
        android:label="@string/title_medical"
        tools:layout="@layout/fragment_medical" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.heallinkapp.ui.list.ListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/navigation_music"
        android:name="com.heallinkapp.ui.music.MusicFragment"
        android:label="@string/title_music"
        tools:layout="@layout/fragment_music" />
    <activity
        android:id="@+id/addActivity"
        android:name="com.heallinkapp.ui.add.AddActivity"
        android:label="activity_add"
        tools:layout="@layout/activity_add" />

</navigation>